--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -15,667 +15,71 @@ html, body {
   background: transparent;
 }
 // // // STANDARD PHONE
-// SERVICES
-.services{
+// INTRO
+.intro{
   background: transparent;
   width: 100%;
   height: auto;
-  position: relative;
-  &.active{
-    .service-1{
-      opacity: 1;
-      transform: translateX(0) translateY(40px);
-    }
-    .service-2{
-      opacity: 1;
-      transform: translateX(0) translateY(40px);
-    }
-    .service-3{
-      opacity: 1;
-      transform: translateX(0) translateY(40px);
-    }
-    .service-4{
-      opacity: 1;
-      transform: translateX(0) translateY(40px);
-    }
-  }
-  .border-up{
-    background: rgb(230, 230, 230);
-    height: 2px;
-    width: 65%;
-    margin: 80px auto;
-    transform: translateY(-80px);
-  }
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: left;
   h1{
     &.heading{
-      padding-top: 5px;
-      text-align: center;
+      padding-left: 8px;
       width: 100%;
-      text-transform: uppercase;
       font-family: 'Sniglet', cursive;
-      color: white;
+      color: black;
       font-weight: 700;
       font-size: 26px;
     }
   }
-  .services-paragraph{
-    font-size: 16px;
-    color: white;
+  p{
+    padding-left: 8px;
+    font-size: 15px;
     font-family: 'Sniglet', cursive;
-    opacity: 0.7;
-    text-align: center;
+    color: black;
+    opacity: 0.8;
+    line-height: 190%;
   }
-  .service{
+  .light-overlay{
+    width: max-content;
+    height: max-content;
+    background: rgb(216, 224, 255);
+    padding: 4px;
+    border-radius: 7px;
+  }
+  .sites{
     width: 100%;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    height: 100px;
-    margin: 20px;
-  }
-  .service-1{
-    width: auto;
-    display: flex;
-    transform: translateY(40px) translateX(-140px);
-    backdrop-filter: blur(100px);
-    opacity: 0;
-    transition: all 0.7s ease-in-out;
-    animation: services-1-background 2s infinite;
-    animation-timing-function: ease-in-out;
-    animation-direction:alternate;
-    &.click{
-      margin-top: 25px;
-      margin-bottom: 200px;
-      margin-left: 0;
-      margin-right: 0;
-      transform: scale(1.1);
-    }
-    // SERVICE BACKGROUND KEYFRAME ANIMATION
-    @keyframes services-1-background {
-      from{background: rgb(99, 124, 204);}
-      to {background: rgb(53, 75, 148);}
-    }
-    .text{
-      width: 50%;
-      padding: 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      h1{
-        font-size: 22px;
-        color: white;
-        text-transform: uppercase;
-        font-family: 'Sniglet', cursive;
-      }
-      .about{
-        opacity: 0;
-        pointer-events: none;
-        transition: all 0.7s ease-in-out;
-        text-align: center;
-        border: 1px solid white;
-        border-top: none;
-        width: 80%;
-        position: absolute;
-        background: rgba(240, 240, 240, 0.3);
-        top: 110px;
-        left: 50%;
-        transform: translateX(-50%);
-        height: 200px;
-        &.click{
-          opacity: 1;
-        }
-        &::before{
-          content: '';
-          position: absolute;
-          left: 50%;
-          top: -10px;
-          transform: translateX(-50%);
-          width: 15px;
-          height: 10px;
-          background: rgba(240, 240, 240, 0.3);
-          border-top-left-radius: 100px;
-          border-top-right-radius: 100px;
-        }
-        p{
-          font-size: 16px;
-          color: white;
-          font-family: 'Sniglet', cursive;
-        }
-      }
-    }
-    .img{
-      width: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      i{
-        font-size: 48px;
-        color: white;
-      }
-    }
-  }
-  .service-2{
-    width: auto;
-    display: flex;
-    transform: translateY(40px) translateX(140px);
-    backdrop-filter: blur(100px);
-    opacity: 0;
-    transition: all .7s ease-in-out;
-    animation: services-2-background 2s infinite;
-    animation-timing-function: ease-in-out;
-    animation-direction:alternate;
-    &.click{
-      margin-top: 55px;
-      margin-bottom: 200px;
-      margin-left: 0;
-      margin-right: 0;
-      transform: scale(1.1);
-    }
-    // SERVICE BACKGROUND KEYFRAME ANIMATION
-    @keyframes services-2-background {
-      from{background: rgb(99, 124, 204);}
-      to {background: rgb(53, 75, 148);}
-    }
-    .text{
-      width: 50%;
-      padding: 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      h1{
-        font-size: 22px;
-        color: white;
-        text-transform: uppercase;
-        font-family: 'Sniglet', cursive;
-      }
-      .about{
-        opacity: 0;
-        pointer-events: none;
-        transition: all 0.7s ease-in-out;
-        text-align: center;
-        border: 1px solid white;
-        border-top: none;
-        width: 80%;
-        position: absolute;
-        background: rgba(240, 240, 240, 0.3);
-        top: 110px;
-        left: 50%;
-        transform: translateX(-50%);
-        height: 200px;
-        &.click{
-          opacity: 1;
-        }
-        &::before{
-          content: '';
-          position: absolute;
-          left: 50%;
-          top: -10px;
-          transform: translateX(-50%);
-          width: 15px;
-          height: 10px;
-          background: rgba(240, 240, 240, 0.3);
-          border-top-left-radius: 100px;
-          border-top-right-radius: 100px;
-        }
-        p{
-          font-size: 16px;
-          color: white;
-          font-family: 'Sniglet', cursive;
-        }
-      }
-    }
-    .img{
-      width: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      i{
-        font-size: 48px;
-        color: white;
-      }
-    }
-  }
-  .service-3{
-    width: auto;
-    display: flex;
-    transform: translateY(40px) translateX(-140px);
-    backdrop-filter: blur(100px);
-    opacity: 0;
-    transition: all .7s ease-in-out;
-    animation: services-3-background 2s infinite;
-    animation-timing-function: ease-in-out;
-    animation-direction:alternate;
-    &.click{
-      margin-top: 55px;
-      margin-bottom: 200px;
-      margin-left: 0;
-      margin-right: 0;
-      transform: scale(1.1);
-    }
-    // SERVICE BACKGROUND KEYFRAME ANIMATION
-    @keyframes services-3-background {
-      from{background: rgb(99, 124, 204);}
-      to {background: rgb(53, 75, 148);}
-    }
-    .text{
-      width: 50%;
-      padding: 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      h1{
-        font-size: 22px;
-        color: white;
-        text-transform: uppercase;
-        font-family: 'Sniglet', cursive;
-      }
-      .about{
-        opacity: 0;
-        pointer-events: none;
-        transition: all 0.7s ease-in-out;
-        text-align: center;
-        border: 1px solid white;
-        border-top: none;
-        width: 80%;
-        position: absolute;
-        background: rgba(240, 240, 240, 0.3);
-        top: 110px;
-        left: 50%;
-        transform: translateX(-50%);
-        height: 200px;
-        &.click{
-          opacity: 1;
-        }
-        &::before{
-          content: '';
-          position: absolute;
-          left: 50%;
-          top: -10px;
-          transform: translateX(-50%);
-          width: 15px;
-          height: 10px;
-          background: rgba(240, 240, 240, 0.3);
-          border-top-left-radius: 100px;
-          border-top-right-radius: 100px;
-        }
-        p{
-          font-size: 16px;
-          color: white;
-          font-family: 'Sniglet', cursive;
-        }
-      }
-    }
-    .img{
-      width: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      i{
-        font-size: 48px;
-        color: white;
-      }
-    }
-  }
-  .service-4{
-    width: auto;
-    display: flex;
-    transform: translateY(40px) translateX(140px);
-    backdrop-filter: blur(100px);
-    opacity: 0;
-    transition: all .7s ease-in-out;
-    animation: services-4-background 2s infinite;
-    animation-timing-function: ease-in-out;
-    animation-direction:alternate;
-    &.click{
-      margin-top: 55px;
-      margin-bottom: 200px;
-      margin-left: 0;
-      margin-right: 0;
-      transform: scale(1.1);
-    }
-    // SERVICE BACKGROUND KEYFRAME ANIMATION
-    @keyframes services-4-background {
-      from{background: rgb(99, 124, 204);}
-      to {background: rgb(53, 75, 148);}
-    }
-    .text{
-      width: 50%;
-      padding: 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      h1{
-        font-size: 22px;
-        color: white;
-        text-transform: uppercase;
-        font-family: 'Sniglet', cursive;
-      }
-      .about{
-        opacity: 0;
-        pointer-events: none;
-        transition: all 0.7s ease-in-out;
-        text-align: center;
-        border: 1px solid white;
-        border-top: none;
-        width: 80%;
-        position: absolute;
-        background: rgba(240, 240, 240, 0.3);
-        top: 110px;
-        left: 50%;
-        transform: translateX(-50%);
-        height: 200px;
-        &.click{
-          opacity: 1;
-        }
-        &::before{
-          content: '';
-          position: absolute;
-          left: 50%;
-          top: -10px;
-          transform: translateX(-50%);
-          width: 15px;
-          height: 10px;
-          background: rgba(240, 240, 240, 0.3);
-          border-top-left-radius: 100px;
-          border-top-right-radius: 100px;
-        }
-        p{
-          font-size: 16px;
-          color: white;
-          font-family: 'Sniglet', cursive;
-        }
-      }
-    }
-    .img{
-      width: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      i{
-        font-size: 48px;
-        color: white;
-      }
-    }
-  }
-}
-// PRODUCT
-.product-section{
-  background: transparent;
-  text-align: center;
-  width: 100%;
-  height: auto;
-  padding: 15px;
-  padding-top: 40px;
-  position: relative;
-  &.active{
+    height: auto;
+    padding: 10px;
+    text-align: left;
+    background: #93acffa8;
     .product-card{
-      opacity: 1;
-      transform: translateY(40px);
-    }
-  }
-  .border-up{
-    background: rgb(230, 230, 230);
-    height: 2px;
-    width: 65%;
-    margin: 40px auto;
-    transform: translateY(-40px);
-  }
-  .border-down{
-    background: rgb(230, 230, 230);
-    height: 2px;
-    width: 65%;
-    margin: 80px auto;
-    transform: translateY(80px);
-  }
-  h1{
-    &.heading{
-      width: 100%;
-      text-transform: uppercase;
-      font-family: 'Sniglet', cursive;
-      color: white;
-      font-weight: 700;
-      font-size: 26px;
-    }
-  }
-  .product-card{
-    margin: 30px auto;
-    border-radius: 5%;
-    background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8); 
-    backdrop-filter: blur(100px);   
-    padding: 5px;
-    opacity: 0;
-    transition: all ease-in .5s;
-    transform: translateY(80px);
-    max-width: 320px;
-    .text{
-      .product-name{
-        font-size: 22px;
+      background: #607bd3;
+      display: inline-block;
+      width: 140px;
+      height: 80px;
+      text-align: center;
+      margin: 20px;
+      margin-left: 0;
+      border-radius: 7px;
+      position: relative;
+      h1{
+        font-size: 15px;
         color: white;
-        margin-bottom: 60px;
+        padding-top: 10px;
       }
-      p{
+      i{
         color: white;
-        text-align: left;
-        transform: translateX(23px);
-      }
-      .product-price{
-        font-size: 18px;
-        opacity: 0.8;
-        color: white;
-        margin-bottom: 60px;
+        font-size: 32px;
+        position: absolute;
+        bottom: -5px;
+        right: -9px;
       }
     }
   }
 }
-// INFO/PROCCESS
-.proccess{
-  background: transparent;
-  width: 100%;
-  height: auto;
-  padding: 30px;
-  text-align: center;
-  position: relative;
-  &.active{
-    .content{
-      .class-1{
-        opacity: 1;
-        transform: translateY(0);
-        transition: all ease-in .2s;
-      }
-      .class-2{
-        opacity: 1;
-        transform: translateY(0);
-        transition: all ease-in .6s;
-      }
-      .class-3{
-        opacity: 1;
-        transform: translateY(0);
-      transition: all ease-in .8s;
-    }
-    .class-4{
-      opacity: 1;
-      transform: translateY(0);
-      transition: all ease-in 1s;
-    }
-    .class-5{
-      opacity: 1;
-      transform: translateY(0);
-      transition: all ease-in 1.2s;
-    }
-  }
-}
-  .border{
-    background: rgb(230, 230, 230);
-    height: 2px;
-    width: 65%;
-    margin: 20px auto;
-    transform: translateY(20px);
-  }
-  h1{
-    &.heading{
-      width: 100%;
-      text-transform: uppercase;
-      font-family: 'Sniglet', cursive;
-      color: white;
-      font-weight: 700;
-      font-size: 26px;
-    }
-  }
-  .content{
-    width: 100%;
-    height: auto;
-    margin: 0;
-    .class-1{
-      opacity: 0;
-      margin: 35px auto;
-      transform: translateY(40px);
-      h1{
-        font-size: 20px;
-        margin-bottom: 10px;
-        font-family: 'Sniglet', cursive;
-        color: white;
-      }
-      img{
-        width: 250px;
-        height: auto;
-        border-radius: 15px;
-        border: 1px solid rgb(120, 144, 220);
-      }
-      p{
-        margin-top: 5px;
-        font-size: 15px;
-        opacity: 0.8;
-        font-family: 'Sniglet', cursive;
-        color: white;
-      }
-    }
-    .class-2{
-      opacity: 0;
-      margin: 35px auto;
-      transform: translateY(40px);
-      h1{
-        font-size: 20px;
-        margin-bottom: 10px;
-        font-family: 'Sniglet', cursive;
-        color: white;
-      }
-      img{
-        width: 250px;
-        height: auto;
-        border-radius: 15px;
-        border: 1px solid rgb(120, 144, 220);
-      }
-      p{
-        margin-top: 5px;
-        font-size: 15px;
-        opacity: 0.8;
-        font-family: 'Sniglet', cursive;
-        color: white;
-      }
-    }
-    .class-3{
-      opacity: 0;
-      margin: 35px auto;
-      transform: translateY(40px);
-      h1{
-        font-size: 20px;
-        margin-bottom: 10px;
-        font-family: 'Sniglet', cursive;
-        color: white;
-      }
-      img{
-        width: 250px;
-        height: auto;
-        border-radius: 15px;
-        border: 1px solid rgb(120, 144, 220);
-      }
-      p{
-        margin-top: 5px;
-        font-size: 15px;
-        opacity: 0.8;
-        font-family: 'Sniglet', cursive;
-        color: white;
-      }
-    }
-    .class-4{
-      opacity: 0;
-      margin: 35px auto;
-      transform: translateY(40px);
-      h1{
-        font-size: 20px;
-        margin-bottom: 10px;
-        font-family: 'Sniglet', cursive;
-        color: white;
-      }
-      img{
-        width: 250px;
-        height: auto;
-        border-radius: 15px;
-        border: 1px solid rgb(120, 144, 220);
-      }
-      p{
-        margin-top: 5px;
-        font-size: 15px;
-        opacity: 0.8;
-        font-family: 'Sniglet', cursive;
-        color: white;
-      }
-    }
-    .class-5{
-      opacity: 0;
-      margin: 35px auto;
-      transform: translateY(40px);
-      h1{
-        font-size: 20px;
-        margin-bottom: 10px;
-        font-family: 'Sniglet', cursive;
-        color: white;
-      }
-      img{
-        width: 250px;
-        height: auto;
-        border-radius: 15px;
-        border: 1px solid rgb(120, 144, 220);
-      }
-      p{
-        margin-top: 5px;
-        font-size: 15px;
-        opacity: 0.8;
-        font-family: 'Sniglet', cursive;
-        color: white;
-      }
-    }
-  }
-}
-// ORDER NOW
-.order-now{
-  width: 100%;
-  height: auto;
-  background: transparent;
-  opacity: 0;
-  transition: .5s ease-in-out;
-  transform: translateX(20px);
-  img{
-    height: auto;
-    transform: translateX(-15px);
-  }
-    .order-button{
-      transform: translateY(-220px) translateX(90px);
-      border-radius: 4px;
-      width: 200px;
-      font-size: 16px;
-      padding: 10px;
-      transition: all .2s ease-in-out;
-      color: white;
-      outline: none;
-      background: linear-gradient(135deg,#5a7ef5, #607bd3);  
-      box-shadow: 1.5px 3px 2px rgb(60, 84, 160);
-      border: 2px solid transparent; 
-    }
-    &.active{
-      opacity: 1;
-      transform: translateX(0);
-    }
-}
+
 // CONTACT US
 .contact-us{
   background: transparent;
@@ -683,7 +87,8 @@ html, body {
   height: auto;
   padding-top: 20px;
   padding-bottom: 20px;
-  text-align: center;
+  padding-left: 8px;
+  text-align: left;
   &.active{
     form{
       opacity: 1;
@@ -692,30 +97,29 @@ html, body {
   h1{
     &.heading{
       width: 100%;
-      text-transform: uppercase;
       font-family: 'Sniglet', cursive;
-      color: white;
+      color: black;
       font-weight: 700;
       font-size: 26px;
     }
   }
   p{
-    font-size: 18px;
-    text-transform: uppercase;
+    font-size: 15px;
     font-family: 'Sniglet', cursive;
-    color: white;
+    color: black;
     opacity: 0.8;
+    line-height: 190%;
   }
   form{
     text-align: left;
     padding: 10px;
-    margin: 15px;
     margin-top: 0;
     opacity: 1;
     transition: all ease-in .5s;
     position: relative;
     background: #e8edff;
     border-radius: 4px;
+    max-width: 360px;
     .form-tag-navn{
       font-size: 15px;
       color: rgb(48, 71, 146);
