--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -28,12 +28,7 @@
 }
 
 #navbar.sticky .logo h1 {
-  color: #323232;
-}
-
-#navbar.sticky .order {
-  background: #6e8efb;
-  border: 2px solid transparent;
+  color: #5370d1;
 }
 
 #navbar .logo {
@@ -49,7 +44,7 @@
   margin: 0;
   font-family: 'Indie Flower', cursive;
   color: #ebebeb;
-  font-size: 30px;
+  font-size: 26px;
   -webkit-transition: .2s ease-in-out;
   transition: .2s ease-in-out;
 }
@@ -75,8 +70,8 @@
   display: block;
   width: 7px;
   height: 7px;
-  -webkit-transition: .2s ease-in-out;
-  transition: .2s ease-in-out;
+  -webkit-transition: .2s;
+  transition: .2s;
   background: #ebebeb;
   border-radius: 100%;
   margin: 3px;
@@ -103,7 +98,7 @@
 
 #navbar .circle {
   border-radius: 100%;
-  background: #071852;
+  background: #1e1e1e;
   width: 100px;
   height: 100px;
   position: fixed;
@@ -112,18 +107,17 @@
   -webkit-transform: translateX(-50%) scale(1);
           transform: translateX(-50%) scale(1);
   z-index: 100;
-  opacity: 0;
   pointer-events: none;
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
+  opacity: 0;
 }
 
 #navbar .circle.active {
   -webkit-transform: scale(20);
           transform: scale(20);
   opacity: 1;
-  background: #4c66bb;
-  opacity: 0.95;
+  background: rgba(10, 10, 10, 0.95);
 }
 
 #navbar .sidebar {
@@ -157,51 +151,133 @@
   text-decoration: none;
   width: 60%;
   font-size: 18px;
-  margin: 25px auto;
+  margin: 13px auto;
   padding: 5px;
   opacity: 0;
-  -webkit-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
+  -webkit-transition: .1s;
+  transition: .1s;
+  -webkit-transition: opacity .3s;
+  transition: opacity .3s;
 }
 
-#navbar .sidebar .sidebar-ul .sidebar-li :nth-child(5) {
-  border: 2px solid transparent;
-  background: linear-gradient(135deg, #688bfc, #7996f8);
-  border-radius: 4px;
-  color: white;
-  padding: 10px;
-  -webkit-box-shadow: 0px 5px 2px #3c54a0;
-          box-shadow: 0px 5px 2px #3c54a0;
+#navbar .sidebar .sidebar-ul .sidebar-li a i {
+  -webkit-transform: translateX(10px);
+          transform: translateX(10px);
+  font-size: 14px;
+  -webkit-transition: .2s !important;
+  transition: .2s !important;
 }
 
-#navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(1) {
+#navbar .sidebar .sidebar-ul .sidebar-li .prices-dropdown .prices-dropdown-links {
+  width: 100%;
+  height: 100vh;
+  display: none;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .prices-dropdown .prices-dropdown-links a {
+  font-size: 16px;
+  margin: 5px;
+  opacity: 0.65 !important;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .prices-dropdown .prices-dropdown-links.active {
+  display: block;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .prices-dropdown #pricesToggle.click {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  color: #8fa9ff;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .prices-dropdown #pricesToggle.click i {
+  -webkit-transform: rotate(180deg) translateX(-10px);
+          transform: rotate(180deg) translateX(-10px);
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .about-dropdown .about-dropdown-links {
+  width: 100%;
+  height: 100vh;
+  display: none;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .about-dropdown .about-dropdown-links a {
+  font-size: 16px;
+  margin: 5px;
+  opacity: 0.65 !important;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .about-dropdown .about-dropdown-links.active {
+  display: block;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .about-dropdown #aboutToggle.click {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  color: #8fa9ff;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .about-dropdown #aboutToggle.click i {
+  -webkit-transform: rotate(180deg) translateX(-10px);
+          transform: rotate(180deg) translateX(-10px);
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .help-dropdown .help-dropdown-links {
+  width: 100%;
+  height: 100vh;
+  display: none;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .help-dropdown .help-dropdown-links a {
+  font-size: 16px;
+  margin: 5px;
+  opacity: 0.65 !important;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .help-dropdown .help-dropdown-links.active {
+  display: block;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .help-dropdown #helpToggle.click {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  color: #8fa9ff;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .help-dropdown #helpToggle.click i {
+  -webkit-transform: rotate(180deg) translateX(-10px);
+          transform: rotate(180deg) translateX(-10px);
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .account-dropdown .account-dropdown-links {
+  width: 100%;
+  height: 100vh;
+  display: none;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .account-dropdown .account-dropdown-links a {
+  font-size: 16px;
+  margin: 5px;
+  opacity: 0.65 !important;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .account-dropdown .account-dropdown-links.active {
+  display: block;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .account-dropdown #accountToggle.click {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  color: #8fa9ff;
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li .account-dropdown #accountToggle.click i {
+  -webkit-transform: rotate(180deg) translateX(-10px);
+          transform: rotate(180deg) translateX(-10px);
+}
+
+#navbar .sidebar .sidebar-ul .sidebar-li.active a {
   opacity: 1;
-  -webkit-transition: 1s ease-in-out 0.6s;
-  transition: 1s ease-in-out 0.6s;
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(2) {
-  opacity: 1;
-  -webkit-transition: 1s ease-in-out 0.8s;
-  transition: 1s ease-in-out 0.8s;
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(3) {
-  opacity: 1;
-  -webkit-transition: 1s ease-in-out 1.2s;
-  transition: 1s ease-in-out 1.2s;
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(4) {
-  opacity: 1;
-  -webkit-transition: 1s ease-in-out 1.4s;
-  transition: 1s ease-in-out 1.4s;
-}
-
-#navbar .sidebar .sidebar-ul .sidebar-li.active :nth-child(5) {
-  opacity: 1;
-  -webkit-transition: 1s ease-in-out 1.6s;
-  transition: 1s ease-in-out 1.6s;
 }
 
 #navbar .sidebar.active {
@@ -209,142 +285,22 @@
   pointer-events: visible;
 }
 
-#navbar .my-account-icon {
-  margin: 0;
-  position: absolute;
-  right: 75px;
-  padding: 10px;
-  cursor: pointer;
-  padding: 10px;
-  width: auto;
-  height: auto;
-}
-
-#navbar .my-account-icon i {
-  color: #ebebeb;
-  font-size: 25px;
-}
-
-#navbar .my-account-icon.click {
-  position: fixed;
-}
-
-#navbar .login-signup {
-  width: 97%;
-  height: auto;
-  text-align: center;
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  border-radius: 15px;
-  opacity: 0;
-  pointer-events: none;
-  -webkit-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
-  background: transparent;
-  -webkit-backdrop-filter: blur(50px);
-          backdrop-filter: blur(50px);
-}
-
-#navbar .login-signup #choose {
-  display: block;
-}
-
-#navbar .login-signup #choose.hidden {
-  display: none;
-}
-
-#navbar .login-signup.active {
-  padding-bottom: 20px;
-  opacity: 1;
-  pointer-events: visible;
-}
-
-#navbar .login-signup .part-one {
-  border-radius: 10px;
-  background: white;
-  width: 100%;
-}
-
-#navbar .login-signup .part-one #logOut {
-  color: #f81212;
-}
-
-#navbar .login-signup .part-one a {
-  color: #0f0f0f;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 60px;
-  width: 100%;
-  border-bottom: 1px solid #e1e1e1;
-  font-size: 18px;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-}
-
-#navbar .login-signup .part-one a:active {
-  background: #d7d7d7;
-  text-decoration: underline;
-}
-
-#navbar .login-signup .part-one a:nth-child(2) {
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  border: none;
-}
-
-#navbar .login-signup .part-two {
-  border-radius: 10px;
-  background: white;
-  margin: 7px 0;
-}
-
-#navbar .login-signup .part-two a {
-  border-radius: 10px;
-  font-size: 18px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 60px;
-  width: 100%;
-  font-weight: bolder;
-}
-
-#navbar .login-signup .part-two a:active {
-  background: #d7d7d7;
-}
-
 #navbar .order {
   margin: 0;
   position: absolute;
-  right: 130px;
+  right: 80px;
   cursor: pointer;
   color: white;
-  padding: 5px 8px;
-  width: 70px;
+  padding: 5px 5px;
+  width: 80px;
   text-align: center;
   border-radius: 7px;
-  -webkit-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in;
-  font-size: 14px;
+  -webkit-transition: .2s;
+  transition: .2s;
+  font-size: 12px;
   border-radius: 4px;
   background: transparent;
   text-decoration: none;
-  border: 2px solid white;
+  background: #1cd31c;
 }
 /*# sourceMappingURL=nav.css.map */
