--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -26,12 +26,8 @@
         }
         .logo{
             h1{
-                color: rgb(50, 50, 50);
+                color: #5370d1;
             }
-        }
-        .order{
-            background: #6e8efb;
-            border: 2px solid transparent;
         }
     }
     // LOGO CSS 
@@ -47,7 +43,7 @@
             font-family: 'Indie Flower', cursive;
             // color: rgb(60, 84, 160);
             color: rgb(235, 235, 235);
-            font-size: 30px;
+            font-size: 26px;
             transition: .2s ease-in-out;
         }
         &.menu-click{
@@ -71,7 +67,7 @@
             display: block;
             width: 7px;
             height: 7px;
-            transition: .2s ease-in-out;
+            transition: .2s;
             background: rgb(235, 235, 235);
             border-radius: 100%;
             margin: 3px;
@@ -102,7 +98,8 @@
     // SIDEBAR
     .circle{
         border-radius: 100%;
-        background: rgb(7, 24, 82);
+        // background: rgb(7, 24, 82);
+        background: rgb(30, 30, 30);
         width: 100px;
         height: 100px;
         position: fixed;
@@ -110,14 +107,14 @@
         left: 50%;
         transform: translateX(-50%) scale(1);
         z-index: 100;
-        opacity: 0;
         pointer-events: none;
         transition: all 1s ease-in-out;
+        opacity: 0;
         &.active{
             transform: scale(20);
             opacity: 1;
-            background: rgb(76, 102, 187);
-            opacity: 0.95;
+            // background: rgb(76, 102, 187);
+            background: rgba(10, 10, 10, 0.95);
         }
     }
     .sidebar{
@@ -145,39 +142,116 @@
                     text-decoration: none;
                     width: 60%;
                     font-size: 18px;
-                    margin: 25px auto;
+                    margin: 13px auto;
                     padding: 5px;
                     opacity: 0;
-                    transition: all .5s ease-in-out;
+                    transition: .1s;
+                    transition: opacity .3s;
+                    i{
+                        transform: translateX(10px);
+                        font-size: 14px;
+                        transition: .2s !important;
+                    }
                 }
-                :nth-child(5){
-                    border: 2px solid transparent;
-                    background: linear-gradient(135deg,#688bfc, #7996f8);    
-                    border-radius: 4px;
-                    color: white;
-                    padding: 10px;
-                    box-shadow: 0px 5px 2px rgb(60, 84, 160);
+                .prices-dropdown{
+                    .prices-dropdown-links{
+                        width: 100%;
+                        height: 100vh;
+                        display: none;
+                        a{
+                            font-size: 16px;
+                            margin: 5px;
+                            opacity: 0.65 !important;
+                        }
+                        &.active{
+                            display: block;
+                        }
+                    }
+                    #pricesToggle{
+                        &.click{
+                            transform: scale(1.2);
+                            color: #8fa9ff;
+                            i{
+                                transform: rotate(180deg) translateX(-10px);
+                            }
+                        }
+                    }
+                }
+                .about-dropdown{
+                    .about-dropdown-links{
+                        width: 100%;
+                        height: 100vh;
+                        display: none;
+                        a{
+                            font-size: 16px;
+                            margin: 5px;
+                            opacity: 0.65 !important;
+                        }
+                        &.active{
+                            display: block;
+                        }
+                    }
+                    #aboutToggle{
+                        &.click{
+                            transform: scale(1.2);
+                            color: #8fa9ff;
+                            i{
+                                transform: rotate(180deg) translateX(-10px);
+                            }
+                        }
+                    }
+                }
+                .help-dropdown{
+                    .help-dropdown-links{
+                        width: 100%;
+                        height: 100vh;
+                        display: none;
+                        a{
+                            font-size: 16px;
+                            margin: 5px;
+                            opacity: 0.65 !important;
+                        }
+                        &.active{
+                            display: block;
+                        }
+                    }
+                    #helpToggle{
+                        &.click{
+                            transform: scale(1.2);
+                            color: #8fa9ff;
+                            i{
+                                transform: rotate(180deg) translateX(-10px);
+                            }
+                        }
+                    }
+                }
+                .account-dropdown{
+                    .account-dropdown-links{
+                        width: 100%;
+                        height: 100vh;
+                        display: none;
+                        a{
+                            font-size: 16px;
+                            margin: 5px;
+                            opacity: 0.65 !important;
+                        }
+                        &.active{
+                            display: block;
+                        }
+                    }
+                    #accountToggle{
+                        &.click{
+                            transform: scale(1.2);
+                            color: #8fa9ff;
+                            i{
+                                transform: rotate(180deg) translateX(-10px);
+                            }
+                        }
+                    }
                 }
                 &.active{
-                    :nth-child(1){
+                    a{
                         opacity: 1;
-                        transition: 1s ease-in-out 0.6s;
-                    }
-                    :nth-child(2){
-                        opacity: 1;
-                        transition: 1s ease-in-out 0.8s;
-                    }
-                    :nth-child(3){
-                        opacity: 1;
-                        transition: 1s ease-in-out 1.2s;
-                    }
-                    :nth-child(4){
-                        opacity: 1;
-                        transition: 1s ease-in-out 1.4s;
-                    }
-                    :nth-child(5){
-                        opacity: 1;
-                        transition: 1s ease-in-out 1.6s;
                     }
                 }
             }
@@ -187,116 +261,23 @@
             pointer-events: visible;
         }
     }    
-    // // // USER CSS
-    // USER ICON CSS
-    .my-account-icon{
-        margin: 0;
-        position: absolute;
-        right: 75px;
-        padding: 10px;
-        cursor: pointer;
-        padding: 10px;
-        width: auto;
-        height: auto;
-        i{
-            color: rgb(235, 235, 235);
-            font-size: 25px;
-        }
-        &.click{
-            position: fixed; 
-        }
-    }
-    // USER LOGIN OR SIGNUP CSS
-    .login-signup{
-        width: 97%;
-        height: auto;
-        text-align: center;
-        position: fixed;
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        border-radius: 15px;
-        opacity: 0;
-        pointer-events: none;
-        transition: all .3s ease-in-out;
-        background: transparent;
-        backdrop-filter: blur(50px);
-        #choose{
-            display: block;
-            &.hidden{
-                display: none;
-            }
-        }
-        &.active{
-            padding-bottom: 20px;
-            opacity: 1;
-            pointer-events: visible;
-        }
-        .part-one{
-            border-radius: 10px;
-            background: white;
-            width: 100%;
-            #logOut{
-                color: rgb(248, 18, 18);
-            }
-            a{
-                color: rgb(15, 15, 15);
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 60px;
-                width: 100%;
-                border-bottom: 1px solid rgb(225, 225, 225);
-                font-size: 18px;
-                border-top-right-radius: 10px;
-                border-top-left-radius: 10px;
-                &:active{
-                    background: rgb(215, 215, 215);
-                    text-decoration: underline;
-                }
-                &:nth-child(2){
-                    border-bottom-right-radius: 10px;
-                    border-bottom-left-radius: 10px;
-                    border: none;
-                }
-            }
-        }
-        .part-two{
-            border-radius: 10px;
-            background: white;
-            margin: 7px 0;
-            a{
-                border-radius: 10px;
-                font-size: 18px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 60px;
-                width: 100%;
-                font-weight: bolder;
-                &:active{
-                    background: rgb(215, 215, 215);
-                }
-            }
-        }
-    }
     // ORDER CSS
     .order{
         margin: 0;
         position: absolute;
-        right: 130px;
+        right: 80px;
         cursor: pointer;
         color: white;
-        padding: 5px 8px;
-        width: 70px;
+        padding: 5px 5px;
+        width: 80px;
         text-align: center;
         border-radius: 7px;
-        transition: all 0.2s ease-in;
-        font-size: 14px;
+        transition: .2s;
+        font-size: 12px;
         border-radius: 4px;
         background: transparent;
         text-decoration: none;
-        border: 2px solid white;
+        background: rgb(28, 211, 28);
       }
 }
 
